--- a/index.html
+++ b/index.html
@@ -2,11 +2,18 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>Flappy Bird Clone</title>
+
+    <!-- Link to CSS -->
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <canvas id="gameCanvas" width="400" height="600"></canvas>
+
+    <!-- Load game script -->
     <script src="game.js"></script>
 </body>
 </html>
